--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "express": "^4.17.1",
     "jest": "^27.2.0",
     "morgan": "^1.10.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.3",
