--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest": "^27.2.0",
     "morgan": "^1.10.0",
     "mssql": "^6.3.2",
+    "node-windows": "^1.0.0-beta.6",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5"
   },
