--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "build": "tsc -w",
+    "build": "tsc",
     "dev": "nodemon build/index.js",
     "start": "node build/index.js"
   },
