--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "build": "tsc",
+    "build": "tsc -w",
     "dev": "nodemon build/index.js",
     "start": "node build/index.js"
   },
@@ -13,9 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@breejs/ts-worker": "^1.1.1",
+    "@types/bree": "^7.1.0",
+    "@types/cron": "^1.7.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
+    "cron-schedule": "^3.0.6",
     "express": "^4.17.1",
     "jest": "^27.3.1",
     "morgan": "^1.10.0",
@@ -26,7 +30,6 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
